--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,12 @@
 # Configurações do PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/store_management
-spring.datasource.username=usuarioapi_app
-spring.datasource.password=123456
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.open-in-view=false
-
 
 # Configurações de log
 spring.jpa.properties.hibernate.default_schema=public
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql=TRACE
-
