--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.default_schema=public
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql=TRACE
+
+spring.security.user.name=admin
+spring.security.user.password=123456
+
